--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -44,4 +44,4 @@ $on-laptop: 800px !default;
 }
 
 // Import partials.
-@import 'minima/base', 'minima/layout', 'minima/syntax-highlighting';
+@import 'minima/base', 'minima/layout', 'minima/syntax-highlighting', 'minima-custom.scss';
