--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,12 @@ layout: default
 				</a>
 			</h3>
 			{%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
+			<br />{%- if post.tags -%} {%- for tag in post.tags -%}
+			<code class="language-plaintext highlighter-rouge"
+				><a class="tag-link" href="{{ site.url | append: '/tags/' }}">
+					{{ tag | slugify }}
+				</a></code
+			>&nbsp; {%- endfor -%} {%- endif -%}
 		</li>
 		{%- endfor -%}
 	</ul>
