updated layout and content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,9 @@
   
     <div class="wrapper">
       <div class="footer-col-wrapper">
-        
         <div class="footer-col footer-col-2">
-          {%- include social.html -%}
+          {%- include footer_social.html -%}
         </div>
-  
-        <!-- <div class="footer-col footer-col-3">
-          <p>{{- site.description | escape -}}</p>
-        </div> -->
       </div>
   
     </div>
