--- a/_includes/footer_social.html
+++ b/_includes/footer_social.html
@@ -1,25 +1,27 @@
 <span class="social-media-list">
 	{%- if site.github_username -%}
-	<a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"
-		><svg class="svg-icon">
+	<a
+		href="https://github.com/{{ site.github_username| cgi_escape | escape }}"
+	>
+		<svg class="svg-icon">
 			<use
 				xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"
 			></use>
-		</svg>
-	</a>
-	{%- endif -%} {%- if site.linkedin_username -%}
+		</svg> </a
+	>{%- endif -%}{%- if site.linkedin_username -%}
 	<a
 		href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"
-		><svg class="svg-icon">
+	>
+		<svg class="svg-icon">
 			<use
 				xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"
 			></use>
-		</svg>
-	</a>
-	{%- endif -%} {%- if site.twitter_username -%}
+		</svg> </a
+	>{%- endif -%} {%- if site.twitter_username -%}
 	<a
 		href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}"
-		><svg class="svg-icon">
+	>
+		<svg class="svg-icon">
 			<use
 				xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"
 			></use>
