--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,19 @@ layout: default
 ---
 
 <div class="home">
-	{%- if page.title -%}
-	<h1 class="page-heading">{{ page.title }}</h1>
-	{%- endif -%} {{ content }} {%- if site.posts.size > 0 -%}
-	<h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+	{%- if page.intro_header -%}
+	<h3 class="post-link">
+		{{ page.intro_header | escape }}
+	</h3>
+	{%- endif -%} {{ content }}
+	<!-- You can connect with me on&nbsp; -->
+	<!-- {%- include about_social.html -%}  -->
+	<br />
+</div>
+
+<div class="post">
+	<h1 class="post-title-custom">{{ page.projects_title | escape }}</h1>
+	{%- if site.posts.size > 0 -%}
 	<ul class="post-list">
 		{%- for post in site.posts -%}
 		<li>
@@ -19,14 +28,20 @@ layout: default
 				</a>
 			</h3>
 			{%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
-			<br />{%- if post.tags -%} {%- for tag in post.tags -%}
-			<code class="language-plaintext highlighter-rouge"
-				><a class="tag-link" href="{{ site.url | append: '/tags/' }}">
-					{{ tag | slugify }}
-				</a></code
-			>&nbsp; {%- endfor -%} {%- endif -%}
+			<br />
+			{%- if post.tags -%} {%- assign tagged_post = post -%} {%- include
+			post_tags.html -%} {%- endif -%}
 		</li>
 		{%- endfor -%}
 	</ul>
 	{%- endif -%}
 </div>
+
+{%- if page.include_skills -%}
+<h1 class="post-title-custom">{{ page.skills_title | escape }}</h1>
+<div class="skills">
+	{% for skill in page.skills %}
+	<code class="language-plaintext highlighter-rouge">{{ skill }}</code>
+	{% endfor %}
+</div>
+{%- endif -%}
